--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             <h2>Search for Movie</h2>
             <input type="text" id="search-input" placeholder="Search Movie title...">
             <button id="search-button">Search</button>
+            <button id="watchlist-button">watchlist</button>
             <div id="result-container"></div>
         </section>
     <script src="script.js"></script>
